--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My portfolio</title>
+    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <main>
+        <h1>FD</h1>
         <header>
-            <h1>FD</h1>
             <nav>
                 <ul>
                     <li>Home</li>
@@ -18,87 +20,84 @@
                 </ul>
             </nav>
         </header>
-        <div class="container">
         <div class="content">
-            <h3>Hello</h3>
+            <h3>Hello!!!</h3>
             <p>Welcome to my portfolio site <br>
-            Happy to see you here</p>
+            Happy to see you here!!!!</p>
             <button type="text" value="About" id="btn">About me</button>
         </div>
         <div class="image">
-            <img src="">
-
+            <img src="./assets/images/image1.png">
         </div>
         <div class="intro">
-            <h4>I am Mounika </h4>
-            <h5>Frontend Developer</h5>
+            <h4>Myself,<br><span style="color:yellowgreen">I am Mounika</span></h4>
+            <h5><span style="color:yellowgreen">Frontend</span> Developer</h5>
             <p>I am an enthusiastic student eager to seize opportunities and tackle<br> challenges as a front-end developer. I am passionate about learning <br>new technologies and continuously improving my skills to deliver <br>high-quality work.</p>
             <div class="icon">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-            </div>
-            <div class="profileimage">
-             <img src="">
+                <i class="fa-brands fa-github"></i>
+                <i class="fa-brands fa-linkedin"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-instagram"></i>
             </div>
         </div>
-        <div class="skills">
-            <p>Skills</p>
+        <div class="profileimage">
+            <img src="./assets/images/image.png">
+        </div>
+        <p class="skills">Skills</p>
             <div class="skill-col1">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src=""> 
+                <img src="./assets/images/html.png" alt="HTML">
+                <img src="./assets/images/css.png" alt="CSS">
+                <img src="./assets/images/js.png" alt="Javascript">
+                <img src="./assets/images/react.png" alt="React Js"> 
+                <img src="./assets/images/bootstrap.png" alt="Bootstrap">
+                <img src="./assets/images/c.png" alt="C Programming">
             </div>
-            <div class="skill-col2">
-                <img src="">
-                <img src="">
-                <img src="">
-            </div>
-        </div>
-        <div class="tools">
+            <p class="tools">Tools</p>
             <div class="tool-img1">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
+                <img src="./assets/images/figma.png">
+                <img src="./assets/images/vs.jpeg">
+                <img src="./assets/images/git.png">
+                <img src="./assets/images/github.png">
+                <img src="./assets/images/photoshop.png">
+                <img src="./assets/images/jiralogo.jpeg">
             </div>
-            <div class="tool-img2"></div>
+           <!-- <div class="tool-img2"></div>
                 <img src="">
                 <img src="">
-            </div>
-        </div>
+            </div>-->
+            <p class="project"> Projects</p>
         <div class="projects">
-            <p> Projects</p>
             <div class="project-des1">
-             <img src="">
-             <p>An innovative e-commerce platform designed to bring the latest fashion trends right to your fingertips. As part of my project, I have developed it with a focus on creating an intuitive and user-friendly shopping experience</p>
+             <img src="./assets/images/ecommerce.jpeg">
+             <p>An innovative e-commerce platform designed to bring the latest fashion trends right to your fingertips. 
+                As part of my project,I have developed it with a focus on creating 
+                an intuitive and user-friendly shopping experience
+             <button id="btn" type="text" style="font-size:10px;padding:5px">more</button></p>
             </div>
             <div class="project-des2">
-                <img src="">
-                <p>I had designed a simple and attractive portfolio website for myself . A digital space where creativity meets functionality. This project highlights my skills, projects, and the diverse range of work I have completed in the fields of web development and UI/UX design</p>
+                <img src="./assets/images/portfolio.png">
+                <p class="portfolio">I had designed a simple and attractive portfolio website for myself.<br>A digital space where creativity meets functionality.
+                    This project <br>highlights my skills, projects, and the diverse range of work <br>I have completed in the fields of web development and UI/UX design
+                    <button id="btn" type="text"style="font-size:10px;padding:5px">more</button></p>
             </div>
-        </div>  
+        </div> 
+        <p id="contact">Contact</p> 
         <div class="contact">
             <div class="get-info">
                 <input type="text" id="name" placeholder="Name" required>
                 <input type="text" id="loc" placeholder="Location" required>
                 <input type="email" id="email" placeholder="Email" required>
-                <input type="text" id="des" placeholder="Description">
-            </div>
+                <input type="text" id="des" placeholder="Description" style="height:90px">
+            </div></div>
             <div class="my-info">
                <div class="email">
                 <img src="">
                 <a href="mounika2004@gmail.com">mounika2004@gmail.com</a>
-               </div>
-               <div class="loc">
                 <img src="">
                 <p>Coimbatore</p>
                </div>
             </div>
-        </div>  
-    </div>
+        
     </main> 
 </body>
 </html>
