--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
             </div></div>
             <div class="my-info">
                <div class="email">
-                <img src="">
+                <!--<i class="fa-regular fa-envelope"></i>-->
                 <a href="mounika2004@gmail.com">mounika2004@gmail.com</a>
-                <img src="">
+                <!--<i class="fa-solid fa-location-dot" id="icon"></i>-->
                 <p>Coimbatore</p>
                </div>
             </div>
