--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
              <p>An innovative e-commerce platform designed to bring the latest fashion trends right to your fingertips. 
                 As part of my project,I have developed it with a focus on creating 
                 an intuitive and user-friendly shopping experience
-             <button id="btn" type="text" style="font-size:10px;padding:5px">more</button></p>
+             <!-- <button id="btn" type="text" style="font-size:10px;padding:5px">more</button></p> -->
             </div>
             <div class="project-des2">
                 <img src="./assets/images/portfolio.png">
-                <p class="portfolio">I had designed a simple and attractive portfolio website for myself.<br>A digital space where creativity meets functionality.
-                    This project <br>highlights my skills, projects, and the diverse range of work <br>I have completed in the fields of web development and UI/UX design
-                    <button id="btn" type="text"style="font-size:10px;padding:5px">more</button></p>
+                <p class="portfolio">I had designed a simple and attractive portfolio website for myself.A digital space where creativity meets functionality.
+                    This project highlights my skills, projects, and the diverse range of work I have completed in the fields of web development and UI/UX design
+                    <!-- <button id="btn" type="text"style="font-size:10px;padding:5px">more</button></p> -->
             </div>
-        </div> 
+        </div>
         <p id="contact">Contact</p> 
         <div class="contact">
             <div class="get-info">
@@ -91,9 +91,9 @@
             </div></div>
             <div class="my-info">
                <div class="email">
-                <!--<i class="fa-regular fa-envelope"></i>-->
+                <!-- <i class="fa-regular fa-envelope"></i> -->
                 <a href="mounika2004@gmail.com">mounika2004@gmail.com</a>
-                <!--<i class="fa-solid fa-location-dot" id="icon"></i>-->
+                <!-- <i class="fa-solid fa-location-dot" id="icon"></i> -->
                 <p>Coimbatore</p>
                </div>
             </div>
