--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="intro">
             <h4>Myself,<br><span style="color:yellowgreen">I am Mounika</span></h4>
             <h5><span style="color:yellowgreen">Frontend</span> Developer</h5>
-            <p>I am an enthusiastic student eager to seize opportunities and tackle<br> challenges as a front-end developer. I am passionate about learning <br>new technologies and continuously improving my skills to deliver <br>high-quality work.</p>
+            <p>I am an enthusiastic student eager to seize opportunities and tackle challenges as a front-end developer. I am passionate about learning new technologies and continuously improving my skills to deliver high-quality work.</p>
             <div class="icon">
                 <i class="fa-brands fa-github"></i>
                 <i class="fa-brands fa-linkedin"></i>
@@ -43,7 +43,7 @@
         <div class="profileimage">
             <img src="./assets/images/image.png">
         </div>
-        <p class="skills">Skills</p>
+        <p class="skills">Skills And Tools</p>
             <div class="skill-col1">
                 <img src="./assets/images/html.png" alt="HTML">
                 <img src="./assets/images/css.png" alt="CSS">
@@ -52,7 +52,6 @@
                 <img src="./assets/images/bootstrap.png" alt="Bootstrap">
                 <img src="./assets/images/c.png" alt="C Programming">
             </div>
-            <p class="tools">Tools</p>
             <div class="tool-img1">
                 <img src="./assets/images/figma.png">
                 <img src="./assets/images/vs.jpeg">
@@ -84,20 +83,28 @@
         <p id="contact">Contact</p> 
         <div class="contact">
             <div class="get-info">
-                <input type="text" id="name" placeholder="Name" required>
-                <input type="text" id="loc" placeholder="Location" required>
-                <input type="email" id="email" placeholder="Email" required>
-                <input type="text" id="des" placeholder="Description" style="height:90px">
+                <input type="text" id="name" placeholder="Enter your name" required>
+                <input type="text" id="loc" placeholder="Enter Location" required>
+                <input type="email" id="email" placeholder="Enter Email" required>
+                <button type="submit">Sumbit</button>
             </div></div>
+            
             <div class="my-info">
-               <div class="email">
-                <!-- <i class="fa-regular fa-envelope"></i> -->
-                <a href="mounika2004@gmail.com">mounika2004@gmail.com</a>
-                <!-- <i class="fa-solid fa-location-dot" id="icon"></i> -->
+                <a href="mailto:mounika2004@gmail.com">mounika2004@gmail.com</a>
                 <p>Coimbatore</p>
+                <p>"""I craft digital experiences with precision and purpose, blending creativity with functionality to create seamless user journeys."""</p>
+                <div class="social">
+                    <h5>Let's Talk<h5>
+                    <i class="fa-brands fa-github"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                </div>
+                <footer>@copy.All rights Reserved 2024</footer>
+
                </div>
-            </div>
-        
+            <!-- <footer>@copy.All rights Reserved 2024</footer> -->
+
     </main> 
 </body>
-</html>
+</html> 
