--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <img src="./assets/images/photoshop.png">
                 <img src="./assets/images/jiralogo.jpeg">
             </div>
-           <!-- <div class="tool-img2"></div>
+        `   <!-- <div class="tool-img2"></div>
                 <img src="">
                 <img src="">
             </div>-->
