--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My portfolio</title>
     <link rel="stylesheet" href="./assets/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 </head>
 <body>
     <main>
@@ -34,10 +36,14 @@
             <h5><span style="color:yellowgreen">Frontend</span> Developer</h5>
             <p>I am an enthusiastic student eager to seize opportunities and tackle challenges as a front-end developer. I am passionate about learning new technologies and continuously improving my skills to deliver high-quality work.</p>
             <div class="icon">
-                <i class="fa-brands fa-github"></i>
-                <i class="fa-brands fa-linkedin"></i>
-                <i class="fa-brands fa-twitter"></i>
-                <i class="fa-brands fa-instagram"></i>
+                <a href="https://github.com/mounika558">
+                    <i class="fa-brands fa-github"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/mounikadhanapal">
+                    <i class="fa-brands fa-linkedin"></i>
+                </a>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
             </div>
         </div>
         <div class="profileimage">
@@ -84,7 +90,7 @@
         <div class="contact">
             <div class="get-info">
                 <input type="text" id="name" placeholder="Enter your name" required>
-                <input type="text" id="loc" placeholder="Enter Location" required>
+                <input type="textarea" id="loc" placeholder="Type something...." required>
                 <input type="email" id="email" placeholder="Enter Email" required>
                 <button type="submit">Sumbit</button>
             </div></div>
@@ -94,15 +100,18 @@
                 <p>Coimbatore</p>
                 <p>"""I craft digital experiences with precision and purpose, blending creativity with functionality to create seamless user journeys."""</p>
                 <div class="social">
-                    <h5>Let's Talk<h5>
-                    <i class="fa-brands fa-github"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-instagram"></i>
+                    <h5>Let's Talk</h5>
+                    <a href="https://github.com/mounika558" target="_blank">
+                            <i class="fa-brands fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/mounikadhanapal">
+                            <i class="fa-brands fa-linkedin"></i>
+                    </a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
                 </div>
                 <footer>@copy.All rights Reserved 2024</footer>
 
-               </div>
+            </div>
             <!-- <footer>@copy.All rights Reserved 2024</footer> -->
 
     </main> 
