--- a/index1.html
+++ b/index1.html
@@ -10,6 +10,7 @@
 
 </head>
 <body style="background-color:black;color:white">
+    <script src="./assets/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <div class="container text-center">
@@ -129,7 +130,7 @@
         </div>
         <div class="col-3 contact ">
             <input type="email" id="email" placeholder="Enter Email" required>
-            <button type="submit">Sumbit</button>
+            <button type="submit" onclick="details()">Sumbit</button>
         </div>
      </div>
      <div class="row">
