--- a/index.html
+++ b/index.html
@@ -15,53 +15,80 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <div class="container text-center">
         <div class="grid-layouts">
-     <div class="row">
-        <div class="col-3">
-            <h1 class="logo">FD</h1>
+            <div class="row">
+                <div class="col-3 col">
+                    <h1 class="logo">FD</h1>
+                </div>
+           <div class="col-7 justify-content-end d-md-none ms-5">
+            <p class="d-inline-flex gap-1">
+                <button class="btn btn-secondary mt-5" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                    <i class="fa-solid fa-bars"></i>
+                </button>
+              </p>
+              <div class="collapse fs-5" id="collapseExample">
+                <ul class="nav d-block justify-content-end">
+                    <li class="nav-item">
+                      <a class="nav-link text-white active "href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-white" href="#">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-white" href="#">Project</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-white" aria-disabled="true">Contact</a>
+                </li>
+                  </ul>
+                  </div>
+                  </div>
+                  <div class="col-md-9 mt-5 d-none d-md-inline navigation">
+                    <ul class="nav justify-content-end">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Skills</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Project</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
-    <div class="col-8 navigation">
-        <ul class="nav justify-content-end">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Skills</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Project</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" aria-disabled="true">Contact</a>
-            </li>
-          </ul>
-    </div>
-     </div>
-     <hr>
-     <div class="row mt-5">
-        <div class="col-4 text-start ms-3">
+ <hr>
+    <div class="row mt-5">
+        <div class="col-12 col-md-6 text-start ">
             <h3 class="hello">Hello!!!</h3>
-            <p class="text">Welcome to my portfolio site <br>
+            <p class="text">Welcome to my portfolio<br>
             Happy to see you here!!!!</p>
             <button type="text" value="About" id="btn">About me</button>
         </div>
-        <div class="col-7">
+        <div class="col-9 col-md-5 mt-4 w-md-25">
             <img src="./assets/images/image1.png" class="img-fluid img-thumbnail float-end image responsive" >
         </div>
      </div>
-     <!-- <hr> -->
-     <div class="row text-start">
-        <div class="col-6 mt-5 text">
+    <div class="row text-start">
+        <div class="col-12 col-md-6 mt-5 text">
             <h4 class="hello">Myself,<br><span style="color:rgb(232, 234, 229)">I am Mounika</span></h4>
-            <h5 class="hello"><span style="color:rgb(247, 247, 247)">Frontend</span> Developer</h5>
-            <p>I am an enthusiastic student eager to seize opportunities and tackle challenges as a front-end developer. I am passionate about learning new technologies and continuously improving my skills to deliver high-quality work.</p>
-        </div>
-        <div class="col-4 w-3 mt-5 mx-4">
-            <img src="./assets/images/image.png" class=" img-fluid float-end responsive profileimg">
+            <h5 class="hello fs-1 "><span style="color:rgb(247, 247, 247)">Frontend</span> Developer</h5>
+            </div>
+        <div class="col-7 col-md-6 col-xl-4 mt-5">
+            <img src="./assets/images/image.png" class=" img-fluid float-end esponsive profileimg">
         </div>
      </div>
-     <!-- <hr> -->
+     <div class="row text-start">
+        <div class="col-12 text">
+            <p class="ms-2">I am an enthusiastic student eager to seize opportunities and tackle challenges as a front-end developer. I am passionate about learning new technologies and continuously improving my skills to deliver high-quality work.</p>
+        </div>
+     </div>
+
      <div class="row ">
-        <div class="col-3 mt-5 icons d-flex justify-content-start align-items-center gap-3 p-2">
+        <div class="col-3 mt-2 icons d-flex justify-content-start gap-3 p-2">
             <a href="https://github.com/mounika558">
                 <i class="fa-brands fa-github"></i>
             </a>
@@ -71,87 +98,108 @@
             <a href="#"><i class="fa-brands fa-twitter"></i></a>
             <a href="#"><i class="fa-brands fa-instagram"></i></a>
         </div>
+
+        <div class="row">
+            <div class="col-12 mt-4 d-flex justify-content-start ms-2">
+                <p class="text fs-1" style="font-size:45px">Skills And Tools</p>
+            </div>
+         </div>
+         <div class="row">
+                    <div class="col-3 col-md-2 mt-4  skills">
+                    <img src="./assets/image/html.png" alt="HTML" class="responsive img-fluid">
+                    </div>
+                    <div class="col-3 mt-4 col-md-2 skills">
+                    <img src="./assets/image/css-3.png" alt="CSS" class="responsive img-fluid">
+                    </div>
+                    <div class="col-3 mt-4 col-md-2 skills">
+                    <img src="./assets/image/js.png" alt="Javascript" class="responsive img-fluid">
+                    </div>
+                    <div class="col-3 mt-4 col-md-2  skills">
+                    <img src="./assets/image/physics.png" alt="React Js" class="responsive img-fluid"> 
+                    </div>
+                    <div class="col-3 mt-4 col-md-2 skills">
+                    <img src="./assets/image/bootstrap.png" alt="Bootstrap" class="responsive img-fluid">
+                    </div>
+                    <div class="col-3 mt-4 col-md-2  skills">
+                    <img src="./assets/image/letter-c.png" alt="C Programming" class="responsive img-fluid">
+                    </div>
+                    <div class="col-3 mt-4 col-md-2 skills">
+                        <img src="./assets/image/figma.png" class="responsive img-fluid ">
+                        </div>
+                        <div class="col-3 mt-4 col-md-2  skills">
+                            <img src="./assets/image/social.png" class="responsive img-fluid ">
+                        </div>
+                        <div class="col-3 mt-4 col-md-2 skills">
+                            <img src="./assets/image/logo.png" class="responsive img-fluid ">
+                        </div>
+                        <div class="col-3 mt-4 col-md-2 skills">
+                            <img src="./assets/image/github (1).png" class="responsive img-fluid ">
+                        </div>
+                        <div class="col-3 mt-4 col-md-2 skills">
+                            <img src="./assets/image/adobe-photoshop.png" class="responsive img-fluid "></div>
+                        
+                            <div class="col-3 mt-4 col-md-2 skills">
+                            <img src="./assets/image/jira.png" class="responsive img-fluid"></div>
      </div>
-     <!-- <hr> -->
-     <div class="row">
-        <div class="col-5 mt-4 d-flex justify-content-start ms-3">
-            <p class="text" style="font-size:45px">Skills And Tools</p>
+
+     <div class="row ms-2">
+        <div class="col-12 mt-4 d-flex justify-content-start">
+            <p class="text fs-1" style="font-size:45px"> Projects</p>
         </div>
      </div>
-     <div class="row">
-        <div class="col-8 mt-4 d-flex skills">
-                <img src="./assets/images/html.png" alt="HTML" class="responsive img-fluid ">
-                <img src="./assets/images/css.png" alt="CSS" class="responsive img-fluid">
-                <img src="./assets/images/js.png" alt="Javascript" class="responsive img-fluid">
-                <img src="./assets/images/react.png" alt="React Js" class="responsive img-fluid"> 
-                <img src="./assets/images/bootstrap.png" alt="Bootstrap" class="responsive img-fluid">
-                <img src="./assets/images/c.png" alt="C Programming" class="responsive img-fluid">
-        </div>
-     </div>
-     <div class="row">
-        <div class="col-8 mt-4 d-flex skills mt-5" class="responsive img-fluid ">
-            <img src="./assets/images/figma.png" class="responsive img-fluid ">
-                <img src="./assets/images/vs.jpeg" class="responsive img-fluid ">
-                <img src="./assets/images/git.png" class="responsive img-fluid ">
-                <img src="./assets/images/github.png" class="responsive img-fluid ">
-                <img src="./assets/images/photoshop.png" class="responsive img-fluid ">
-                <img src="./assets/images/jiralogo.jpeg" class="responsive img-fluid ">
-        </div>
-     </div>
-     <!-- <hr> -->
-     <div class="row ms-3">
-        <div class="col-3 mt-4 d-flex justify-content-start ms-3">
-            <p class="text" style="font-size:45px"> Projects</p>
-        </div>
-     </div>
-     <div class="row ms-3 p-2">
-        <div class="col-5 mt-4 text-center">
-            <img src="./assets/images/ecommerce.jpeg" style="width:300px;height:250px">
-            <p class="txt">An innovative e-commerce platform designed to bring the latest fashion trends right to your fingertips. 
+     <div class="row ms-2 p-2">
+        <div class="col-12 col-md-6 mt-5 text-justify">
+            <img src="./assets/images/ecommerce.jpeg" class="img-fluid rounded"style="width:300px;height:250px">
+            <p class="txt ">An innovative e-commerce platform designed to bring the latest fashion trends right to your fingertips. 
                As part of my project,I have developed it with a focus on creating 
                an intuitive and user-friendly shopping experience</p>
         </div>
-        <div class="col-5 mt-4 text-center">
-            <img src="./assets/images/portfolio.png" style="width:280px;height:250px">
+        <div class="col12 col-md-6 mt-5 text-justify">
+            <img src="./assets/images/portfolio.png"  class="img-fluid rounded" style="width:280px;height:250px">
             <p class="txt">I had designed a simple and attractive portfolio website for myself.A digital space where creativity meets functionality.
             This project highlights my skills, projects, and the diverse range of work I have completed in the fields of web development and UI/UX design</p>
         </div>
      </div>
-     <!-- <hr> -->
-     <div class="row ms-3">
+          <!--contact-->
+     <div class="row ms-2">
         <div class="col-4 d-flex justify-content-start">
-            <p class="text"style="font-size:45px">Contact</p>
+            <p class="text fs-1"style="font-size:45px">Contact</p>
         </div>
      </div>
-     <div class="row ms-3">
-        <div class="col-3 contact">
+
+     <div class="row ms-2">
+        <div class="col-12 col-lg-4 col-md-7 contact">
             <input type="text" id="name" placeholder="Enter your name" required>
+        </div>
+        <div class="col-12 col-lg-5 col-md-7 contact">
             <input type="textarea" id="loc" placeholder="Type something...." required>
         </div>
-        <div class="col-3 contact ">
+        <div class="col-12 col-lg-4 col-md-7 contact">
             <input type="email" id="email" placeholder="Enter Email" required>
+        </div>
+        <div class="col-12 col-lg-5 col-md-7  contact">
             <button type="submit" onclick="details()">Sumbit</button>
         </div>
-     </div>
+        </div>
      <div class="row">
-            <div class="col-6">
-                <p class="text">We will be contacting you through the E-Mail shared quickly!!!!</p>
+            <div class="col-12 ms-3 mt-md-5">
+                <blockquote class="fs-3">We will be contacting you through E-Mail shared quickly!!!!</blockquote>
              </div>
-             <div class="col-6">
-                <p class="text">Awaiting to collaborate with you in upcoming projects and innovations!!</p>
+             <div class="col-12 ms-3 ">
+                <blockquote class="fs-3">Awaiting to collaborate with you in upcoming projects and innovations!!</blockquote>
              </div>
      </div>
-     <hr>
-     <div class="row ms-4">
-        <div class="col-12 mt-5 txt text-center">
+<hr>
+     <div class="row ms-2">
+        <div class="col-12 mt-3 txt text-center">
             <a href="mailto:mounika2004@gmail.com">mounika2004@gmail.com</a>
                 <p style="font-weight:bold;">Coimbatore</p>
-                <p class="quote">"""I craft digital experiences with precision and purpose, blending creativity with functionality to create seamless user journeys."""</p>
+                <blockquote class="quote">"""I craft digital experiences with precision and purpose, blending creativity with functionality to create seamless user journeys."""</blockquote>
         </div>
      </div>
      <div class="row ms-4">
-<div class="col-3">
-    <h5 style="font-size:40px;" class="text">Let's Talk</h5>
+<div class="col-md-2 col-3">
+    <h5 style="font-size:25px;" class="text">Let's Talk</h5>
 </div>
 <div class="col-2 mt-3 icons">
     <a href="https://github.com/mounika558" target="_blank">
@@ -170,7 +218,6 @@
 </div>
      </div>
     </div>
-    </div>
-    
+</div>
 </body>
 </html>
