--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <button type="text" value="About" id="btn">About me</button>
         </div>
         <div class="col-9 col-md-5 mt-4 w-md-25">
-            <img src="./assets/images/image1.png" class="img-fluid img-thumbnail float-end image responsive" >
+            <img src="./assets/image/image1.png" class="img-fluid img-thumbnail float-end image responsive" >
         </div>
      </div>
     <div class="row text-start">
@@ -78,7 +78,7 @@
             <h5 class="hello fs-1 "><span style="color:rgb(247, 247, 247)">Frontend</span> Developer</h5>
             </div>
         <div class="col-7 col-md-6 col-xl-4 mt-5">
-            <img src="./assets/images/image.png" class=" img-fluid float-end esponsive profileimg">
+            <img src="./assets/image/image.jpg" class=" img-fluid float-end esponsive profileimg">
         </div>
      </div>
      <div class="row text-start">
@@ -149,13 +149,13 @@
      </div>
      <div class="row ms-2 p-2">
         <div class="col-12 col-md-6 mt-5 text-justify">
-            <img src="./assets/images/ecommerce.jpeg" class="img-fluid rounded"style="width:300px;height:250px">
+            <img src="./assets/image/ecommerce.jpg" class="img-fluid rounded"style="width:300px;height:250px">
             <p class="txt ">An innovative e-commerce platform designed to bring the latest fashion trends right to your fingertips. 
                As part of my project,I have developed it with a focus on creating 
                an intuitive and user-friendly shopping experience</p>
         </div>
         <div class="col12 col-md-6 mt-5 text-justify">
-            <img src="./assets/images/portfolio.png"  class="img-fluid rounded" style="width:280px;height:250px">
+            <img src="./assets/image/portfolio.jpg"  class="img-fluid rounded" style="width:280px;height:250px">
             <p class="txt">I had designed a simple and attractive portfolio website for myself.A digital space where creativity meets functionality.
             This project highlights my skills, projects, and the diverse range of work I have completed in the fields of web development and UI/UX design</p>
         </div>
